# reproduction-tonic-967-issue

./: Cargo.toml  build.rs
.github/workflows/: ci.yml
proto/: internal.proto  module.proto
src/: lib.rs
